Enemies now take dmg when hit
